# speaky

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  speaky.sh
.github/workflows/: build.yml
docs/maverick/skills/alerting/: SKILL.md
docs/maverick/skills/cicd/: SKILL.md
docs/maverick/skills/database/: SKILL.md
docs/maverick/skills/integration-testing/: SKILL.md
docs/maverick/skills/linting/: SKILL.md
docs/maverick/skills/logging/: SKILL.md
docs/maverick/skills/unit-testing/: SKILL.md
docs/technical/: architecture.md  audio-playback.md  cache-system.md  cli.md  configuration.md  index.md  testing.md  tts-integration.md  usage-examples.md
speaky/: __init__.py  audio.py  cache.py  config.py  main.py  tts.py
tests/: __init__.py  test_audio.py  test_cache.py  test_config.py  test_main.py  test_tts.py
usage-examples/: cli.md  makefile.md
usage-examples/claude-hooks/: claude-hooks.md
usage-examples/claude-hooks/.claude/: settings.json
usage-examples/claude-hooks/.claude/hooks/: notification.sh
